[package]
name = "cere-service"
version = "4.8.8"
edition = "2021"

[dependencies]
futures = "0.3.21"
jsonrpsee = { version = "0.16.2", features = ["server"] }
rand = "0.8"
serde = { version = "1.0.136", features = ["derive"] }

node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

# Local
cere-client = { path = "../client", default-features = false, optional = true }
cere-dev-runtime-constants = { path = "../../runtime/cere-dev/constants", optional = true }
cere-rpc = { path = "../../rpc" }

cere-dev-runtime = { path = "../../runtime/cere-dev", optional = true }
cere-runtime = { path = "../../runtime/cere", optional = true }

[features]
default = ["cere-native"]
cere-native = ["cere-runtime", "cere-client/cere"]
cere-dev-native = ["cere-dev-runtime", "cere-dev-runtime-constants", "cere-client/cere-dev"]

runtime-benchmarks = [
  "cere-runtime/runtime-benchmarks",
  "cere-dev-runtime/runtime-benchmarks",
  "sc-service/runtime-benchmarks",
]

try-runtime = [
  "cere-runtime/try-runtime",
  "cere-dev-runtime/try-runtime",
]
