[package]
name = "cere-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
futures = { workspace = true }
jsonrpsee = { workspace = true }
rand = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }

# Substrate dependencies
node-primitives = { workspace = true }
pallet-im-online = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-api = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-trie = { workspace = true }

# Cere dependencies
cere-client = { workspace = true, default-features = false, optional = true }
cere-rpc = { workspace = true }
cere-runtime-common = { workspace = true, optional = true }

cere-dev-runtime = { workspace = true, optional = true }
cere-runtime = { workspace = true, optional = true }

[features]
default = ["cere-native"]
cere-native = ["cere-runtime", "cere-client/cere"]
cere-dev-native = ["cere-dev-runtime", "cere-runtime-common", "cere-client/cere-dev"]

runtime-benchmarks = [
  "cere-runtime/runtime-benchmarks",
  "cere-dev-runtime/runtime-benchmarks",
  "sc-service/runtime-benchmarks",
]

try-runtime = [
  "cere-runtime/try-runtime",
  "cere-dev-runtime/try-runtime",
]
