[package]
name = "cere-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
async-trait.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
rand = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-benchmarking-cli", "pallet-im-online", "sc-authority-discovery", "sc-basic-authorship", "sc-chain-spec", "sc-client-api", "sc-consensus", "sc-consensus-babe", "sc-consensus-grandpa", "sc-consensus-slots", "sc-executor", "sc-network", "sc-network-common", "sc-offchain", "sc-rpc", "sc-service", "sc-sync-state-rpc", "sc-sysinfo", "sc-telemetry", "sc-transaction-pool", "sc-transaction-pool-api", "sp-api", "sp-authority-discovery", "sp-blockchain", "sp-consensus-babe", "sp-consensus-grandpa", "sp-core", "sp-inherents", "sp-runtime", "sp-timestamp", "sp-transaction-storage-proof", "sp-trie"] }

# Cere dependencies
cere-client = { workspace = true, optional = true }
cere-dev-runtime = { workspace = true, optional = true }
cere-rpc.workspace = true
cere-runtime = { workspace = true, optional = true }
cere-runtime-common = { workspace = true, optional = true }
ddc-primitives.workspace = true

[features]
default = ["cere-native"]
cere-native = ["cere-runtime", "cere-client/cere"]
cere-dev-native = ["cere-dev-runtime", "cere-runtime-common", "cere-client/cere-dev"]

runtime-benchmarks = [
  "cere-runtime/runtime-benchmarks",
  "cere-dev-runtime/runtime-benchmarks",
  "polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
  "cere-runtime/try-runtime",
  "cere-dev-runtime/try-runtime",
]
