[package]
name = "pallet-chainbridge"
version = "4.8.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
description = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 3rd-party dependencies
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
