[package]
name = "pallet-chainbridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 3rd-party dependencies
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "sp-io/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
try-runtime = [
  "frame-system/try-runtime",
  "pallet-balances/try-runtime",
]
