[package]
name = "pallet-chainbridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# 3rd-party dependencies
codec.workspace = true
scale-info.workspace = true

# Substrate / Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "pallet-balances", "sp-core", "sp-io", "sp-runtime", "sp-std"] }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "polkadot-sdk/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
