[package]
name = "pallet-dac-registry"
version = "0.1.0"
edition = "2021"
authors = ["Cere Network"]
description = "DAC Registry Pallet for managing WASM modules"
homepage = "https://cere.network"
license = "Apache-2.0"
repository = "https://github.com/cere-network/cere-blockchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { version = "40.0.0", default-features = false, optional = true }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-weights = { version = "31.1.0", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
]
