[package]
name = "pallet-dac-registry"
version = "0.1.0"
authors = ["Cere Network"]
edition = "2021"
homepage = "https://cere.network"
license = "Apache-2.0"
repository = "https://github.com/cere-network/cere-blockchain"
description = "DAC Registry Pallet for managing WASM modules"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde.workspace = true

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-api.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "frame-benchmarking/std"]
try-runtime = ["frame-support/try-runtime"]
std = [
  "codec/std",
  "scale-info/std",
  "serde/std",
  "frame-support/std",
  "frame-system/std",
  "sp-api/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
