[package]
name = "pallet-ddc-clusters-gov"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
codec.workspace = true
ddc-primitives.workspace = true
hex-literal.workspace = true
log.workspace = true
scale-info.workspace = true
serde.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "pallet-referenda", "sp-io", "sp-runtime", "sp-std"] }

[dev-dependencies]
# Substrate dev-deps via the umbrella.
polkadot-sdk = { workspace = true, default-features = true, features = ["frame-benchmarking", "pallet-balances", "pallet-contracts", "pallet-conviction-voting", "pallet-insecure-randomness-collective-flip", "pallet-preimage", "pallet-scheduler", "pallet-timestamp", "sp-arithmetic", "sp-core", "sp-io", "sp-tracing"] }
lazy_static = { workspace = true, default-features = true }
pallet-ddc-clusters = { workspace = true, default-features = true }
pallet-ddc-nodes.workspace = true
pallet-ddc-staking.workspace = true
parking_lot = { workspace = true, default-features = true }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
