[package]
name = "pallet-ddc-clusters-gov"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
codec.workspace = true
ddc-primitives.workspace = true
hex-literal.workspace = true
log.workspace = true
scale-info.workspace = true
serde.workspace = true

# Substrate / Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "pallet-referenda", "sp-io", "sp-runtime", "sp-std"] }

[dev-dependencies]
lazy_static = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-contracts.workspace = true
pallet-conviction-voting.workspace = true
pallet-ddc-clusters = { workspace = true, default-features = true }
pallet-ddc-nodes.workspace = true
pallet-ddc-staking.workspace = true
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = true }
pallet-preimage.workspace = true
pallet-scheduler.workspace = true
pallet-timestamp = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
sp-arithmetic.workspace = true
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
