[package]
name = "pallet-ddc-clusters"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party depdencies
codec = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-contracts = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Cere dependencies
ddc-primitives = { workspace = true }
pallet-ddc-nodes = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
hex-literal = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "ddc-primitives/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-contracts/std",
  "pallet-ddc-nodes/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
