[package]
name = "pallet-ddc-clusters"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party depdencies
codec.workspace = true
hex-literal.workspace = true
log.workspace = true
scale-info.workspace = true
serde.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "pallet-contracts", "sp-core", "sp-io", "sp-runtime", "sp-std"] }

# Cere dependencies
ddc-primitives.workspace = true
pallet-ddc-nodes.workspace = true

[dev-dependencies]
# Substrate dev-deps via the umbrella to keep trait shapes aligned with main deps.
hex-literal = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, default-features = true, features = ["frame-benchmarking", "pallet-balances", "pallet-insecure-randomness-collective-flip", "pallet-timestamp", "sp-io", "sp-tracing"] }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "pallet-ddc-nodes/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
  "pallet-ddc-nodes/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
  "pallet-ddc-nodes/try-runtime",
]
