[package]
name = "pallet-ddc-customers"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
codec = { workspace = true }
log = { workspace = true }
rand_chacha = { workspace = true, optional = true }
scale-info = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Cere dependencies
ddc-primitives = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "pallet-balances/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-system/try-runtime",
]
