[package]
name = "pallet-ddc-customers"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
codec.workspace = true
hex.workspace = true
hex-literal.workspace = true
log.workspace = true
rand_chacha = { workspace = true, optional = true }
scale-info.workspace = true
serde.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "pallet-balances", "pallet-contracts", "sp-core", "sp-io", "sp-runtime", "sp-std"] }

# Cere dependencies
ddc-primitives.workspace = true

[dev-dependencies]
# Substrate dev-deps via the umbrella.
polkadot-sdk = { workspace = true, default-features = true, features = ["frame-benchmarking", "pallet-balances", "pallet-insecure-randomness-collective-flip", "pallet-timestamp", "sp-core", "sp-io", "sp-tracing"] }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "hex/std",
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
