[package]
name = "pallet-ddc-payouts"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
byte-unit = { workspace = true }
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

# Cere dependencies
ddc-primitives = { workspace = true }

[dev-dependencies]
chrono = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "scale-info/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-core/std",
  "frame-election-provider-support/std",
]

runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
