[package]
name = "pallet-ddc-payouts"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
byte-unit.workspace = true
codec.workspace = true
log.workspace = true
scale-info.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-election-provider-support", "frame-support", "frame-system", "sp-core", "sp-io", "sp-runtime", "sp-staking", "sp-std"] }

# Cere dependencies
ddc-primitives.workspace = true

[dev-dependencies]
chrono = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, default-features = true, features = ["pallet-balances", "sp-core", "sp-tracing"] }
substrate-test-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "ddc-primitives/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
